force-app/main/default/objects/Day_Attendance__c/Day_Attendance__c.object-meta.xml
<CustomObject>
    <label>Day Attendance</label>
    <pluralLabel>Day Attendances</pluralLabel>
    <nameField>
        <label>Attendance Number</label>
        <type>AutoNumber</type>
        <displayFormat>ATT-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Daily attendance check-in and check-out tracking for field salespersons with geo-location capture (MOD-03 Daily Field Operations)</description>
</CustomObject>