force-app/main/default/objects/Day_Attendance__c/fields/Auto_Closed__c.field-meta.xml
<CustomField>
    <fullName>Auto_Closed__c</fullName>
    <label>Auto Closed</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Indicates the day was auto-closed by the system scheduled job</description>
</CustomField>