force-app/main/default/objects/Day_Attendance__c/fields/Beat__c.field-meta.xml
<CustomField>
    <fullName>Beat__c</fullName>
    <label>Beat</label>
    <type>Lookup</type>
    <referenceTo>Beat__c</referenceTo>
    <relationshipLabel>Day Attendance Records</relationshipLabel>
    <relationshipName>Day_Attendance_Records</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary beat assigned for this day from journey plan</description>
</CustomField>