force-app/main/default/objects/Day_Attendance__c/fields/Beat_Switch_Reason__c.field-meta.xml
<CustomField>
    <fullName>Beat_Switch_Reason__c</fullName>
    <description>Reason for switching to a different beat during the day.</description>
    <label>Beat Switch Reason</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>