force-app/main/default/objects/Day_Attendance__c/fields/Beat_Switched__c.field-meta.xml
<CustomField>
    <fullName>Beat_Switched__c</fullName>
    <description>Indicates whether the beat was switched during this day.</description>
    <defaultValue>false</defaultValue>
    <label>Beat Switched</label>
    <type>Checkbox</type>
</CustomField>