force-app/main/default/objects/Day_Attendance__c/fields/Companion__c.field-meta.xml
<CustomField>
    <fullName>Companion__c</fullName>
    <label>Companion</label>
    <type>Lookup</type>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Accompanied Days</relationshipLabel>
    <relationshipName>Accompanied_Days</relationshipName>
    <description>The companion employee accompanying the salesperson for the day</description>
</CustomField>