force-app/main/default/objects/Day_Attendance__c/fields/Day_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Day_End_Time__c</fullName>
    <label>Day End Time</label>
    <type>DateTime</type>
</CustomField>