force-app/main/default/objects/Day_Attendance__c/fields/Day_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Day_Start_Time__c</fullName>
    <label>Day Start Time</label>
    <type>DateTime</type>
</CustomField>