force-app/main/default/objects/Day_Attendance__c/fields/Device_Info__c.field-meta.xml
<CustomField>
    <fullName>Device_Info__c</fullName>
    <label>Device Info</label>
    <type>Text</type>
    <length>255</length>
</CustomField>