force-app/main/default/objects/Day_Attendance__c/fields/Distance_Traveled_Km__c.field-meta.xml
<CustomField>
    <fullName>Distance_Traveled_Km__c</fullName>
    <label>Distance Traveled (Km)</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>2</scale>
    <defaultValue>0</defaultValue>
</CustomField>