force-app/main/default/objects/Day_Attendance__c/fields/Duty_Type__c.field-meta.xml
<CustomField>
    <fullName>Duty_Type__c</fullName>
    <description>Classification of work day type</description>
    <label>Duty Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HQ</fullName>
                <default>true</default>
                <label>HQ</label>
            </value>
            <value>
                <fullName>EX-HQ</fullName>
            </value>
            <value>
                <fullName>OS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>