force-app/main/default/objects/Day_Attendance__c/fields/End_Accuracy__c.field-meta.xml
<CustomField>
    <fullName>End_Accuracy__c</fullName>
    <label>End GPS Accuracy</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>2</scale>
    <description>GPS accuracy in meters at day end location</description>
</CustomField>