force-app/main/default/objects/Day_Attendance__c/fields/End_Location_Lat__c.field-meta.xml
<CustomField>
    <fullName>End_Location_Lat__c</fullName>
    <label>End Location Latitude</label>
    <precision>10</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>