force-app/main/default/objects/Day_Attendance__c/fields/End_Location_Long__c.field-meta.xml
<CustomField>
    <fullName>End_Location_Long__c</fullName>
    <label>End Location Longitude</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>7</scale>
</CustomField>