force-app/main/default/objects/Day_Attendance__c/fields/End_Selfie_URL__c.field-meta.xml
<CustomField>
    <fullName>End_Selfie_URL__c</fullName>
    <label>End Selfie URL</label>
    <type>Url</type>
    <description>Selfie photo URL captured at day end</description>
</CustomField>