force-app/main/default/objects/Day_Attendance__c/fields/Is_Finalized__c.field-meta.xml
<CustomField>
    <fullName>Is_Finalized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Finalized</label>
    <type>Checkbox</type>
</CustomField>