force-app/main/default/objects/Day_Attendance__c/fields/Is_Leave_Day__c.field-meta.xml
<CustomField>
    <fullName>Is_Leave_Day__c</fullName>
    <label>Is Leave Day</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this day overlaps with an approved leave request</description>
</CustomField>