force-app/main/default/objects/Day_Attendance__c/fields/Journey_Plan_Day__c.field-meta.xml
<CustomField>
    <fullName>Journey_Plan_Day__c</fullName>
    <label>Journey Plan Day</label>
    <type>Lookup</type>
    <referenceTo>Journey_Plan_Day__c</referenceTo>
    <relationshipLabel>Day Attendance Records</relationshipLabel>
    <relationshipName>Day_Attendance_Records</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links attendance to the planned journey for adherence tracking</description>
</CustomField>