force-app/main/default/objects/Day_Attendance__c/fields/Network_Status__c.field-meta.xml
<CustomField>
    <fullName>Network_Status__c</fullName>
    <label>Network Status</label>
    <type>Text</type>
    <length>50</length>
</CustomField>