force-app/main/default/objects/Day_Attendance__c/fields/Non_Productive_Visits__c.field-meta.xml
<CustomField>
    <fullName>Non_Productive_Visits__c</fullName>
    <label>Non Productive Visits</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Count of non-productive visits during the day</description>
</CustomField>