force-app/main/default/objects/Day_Attendance__c/fields/Odometer_End__c.field-meta.xml
<CustomField>
    <fullName>Odometer_End__c</fullName>
    <label>Odometer End</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>1</scale>
    <description>Vehicle odometer reading at the end of the day (km)</description>
</CustomField>