force-app/main/default/objects/Day_Attendance__c/fields/Odometer_Start__c.field-meta.xml
<CustomField>
    <fullName>Odometer_Start__c</fullName>
    <label>Odometer Start</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>1</scale>
    <description>Vehicle odometer reading at the start of the day (km)</description>
</CustomField>