force-app/main/default/objects/Day_Attendance__c/fields/Orders_Taken__c.field-meta.xml
<CustomField>
    <fullName>Orders_Taken__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Orders Taken</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>