force-app/main/default/objects/Day_Attendance__c/fields/Original_Beat__c.field-meta.xml
<CustomField>
    <fullName>Original_Beat__c</fullName>
    <description>The originally assigned beat before any beat switch.</description>
    <label>Original Beat</label>
    <type>Lookup</type>
    <referenceTo>Beat__c</referenceTo>
    <relationshipLabel>Original Beat Attendances</relationshipLabel>
    <relationshipName>Original_Beat_Attendances</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>