force-app/main/default/objects/Day_Attendance__c/fields/Productive_Calls__c.field-meta.xml
<CustomField>
    <fullName>Productive_Calls__c</fullName>
    <label>Productive Calls</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>