force-app/main/default/objects/Day_Attendance__c/fields/Productivity_Percent__c.field-meta.xml
<CustomField>
    <fullName>Productivity_Percent__c</fullName>
    <label>Productivity %</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
    <description>Calculated productivity rate: Productive Calls / Total Visits * 100</description>
</CustomField>