force-app/main/default/objects/Day_Attendance__c/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <label>Remarks</label>
    <type>LongTextArea</type>
    <length>5000</length>
    <description>Day-end notes and remarks from the salesperson</description>
</CustomField>