force-app/main/default/objects/Day_Attendance__c/fields/Start_Accuracy__c.field-meta.xml
<CustomField>
    <fullName>Start_Accuracy__c</fullName>
    <label>Start GPS Accuracy</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>2</scale>
    <description>GPS accuracy in meters at day start location</description>
</CustomField>