force-app/main/default/objects/Day_Attendance__c/fields/Start_Location_Lat__c.field-meta.xml
<CustomField>
    <fullName>Start_Location_Lat__c</fullName>
    <label>Start Location Latitude</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>7</scale>
</CustomField>