force-app/main/default/objects/Day_Attendance__c/fields/Start_Location_Long__c.field-meta.xml
<CustomField>
    <fullName>Start_Location_Long__c</fullName>
    <label>Start Location Longitude</label>
    <precision>10</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>