force-app/main/default/objects/Day_Attendance__c/fields/Start_Selfie_URL__c.field-meta.xml
<CustomField>
    <fullName>Start_Selfie_URL__c</fullName>
    <label>Start Selfie URL</label>
    <type>Url</type>
</CustomField>