force-app/main/default/objects/Day_Attendance__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Started</fullName>
                <default>true</default>
                <label>Started</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Ended</fullName>
            </value>
            <value>
                <fullName>Auto-Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>