force-app/main/default/objects/Day_Attendance__c/fields/Total_Collections__c.field-meta.xml
<CustomField>
    <fullName>Total_Collections__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Collections</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>