force-app/main/default/objects/Day_Attendance__c/fields/Total_Distance__c.field-meta.xml
<CustomField>
    <fullName>Total_Distance__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Distance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>