force-app/main/default/objects/Day_Attendance__c/fields/Total_Order_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Order_Value__c</fullName>
    <label>Total Order Value</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <defaultValue>0</defaultValue>
</CustomField>