force-app/main/default/objects/Day_Attendance__c/fields/Total_Orders__c.field-meta.xml
<CustomField>
    <fullName>Total_Orders__c</fullName>
    <label>Total Orders</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>