force-app/main/default/objects/Day_Attendance__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Day Attendances (User)</relationshipLabel>
    <relationshipName>User_Day_Attendances</relationshipName>
    <type>Lookup</type>
</CustomField>