force-app/main/default/objects/Day_Attendance__c/fields/Week_Day__c.field-meta.xml
<CustomField>
    <fullName>Week_Day__c</fullName>
    <label>Week Day</label>
    <type>Text</type>
    <length>20</length>
    <description>Day of the week (e.g. Monday, Tuesday) for reporting purposes</description>
</CustomField>