force-app/main/default/objects/Day_Attendance__c/fields/With_Companion__c.field-meta.xml
<CustomField>
    <fullName>With_Companion__c</fullName>
    <label>With Companion</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the salesperson is accompanied by a companion for the day</description>
</CustomField>