force-app/main/default/objects/Day_Attendance__c/validationRules/Attendance_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Attendance_Date_Required</fullName>
    <active>true</active>
    <description>Attendance date is required</description>
    <errorConditionFormula>ISBLANK(Attendance_Date__c)</errorConditionFormula>
    <errorDisplayField>Attendance_Date__c</errorDisplayField>
    <errorMessage>Attendance Date is required.</errorMessage>
</ValidationRule>