force-app/main/default/objects/Day_Attendance__c/validationRules/End_Time_After_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Time_After_Start</fullName>
    <active>true</active>
    <description>End time must be after start time (skipped for auto-closed records)</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(End_Time__c)),
    NOT(ISBLANK(Start_Time__c)),
    End_Time__c &lt; Start_Time__c,
    Auto_Closed__c = false
)</errorConditionFormula>
    <errorDisplayField>End_Time__c</errorDisplayField>
    <errorMessage>End Time must be after Start Time.</errorMessage>
</ValidationRule>