force-app/main/default/objects/Day_Attendance__c/validationRules/Salesperson_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Salesperson_Required</fullName>
    <active>true</active>
    <description>Salesperson is required for attendance records</description>
    <errorConditionFormula>ISBLANK(Salesperson__c)</errorConditionFormula>
    <errorDisplayField>Salesperson__c</errorDisplayField>
    <errorMessage>Salesperson is required for Day Attendance.</errorMessage>
</ValidationRule>